--- a/Javascript Demo-20230414T170832Z-001/Javascript Demo/index.html
+++ b/Javascript Demo-20230414T170832Z-001/Javascript Demo/index.html
@@ -10,7 +10,7 @@
       <h1>The Game Center</h1>
       <p>Please select an option below:</p>
       <div class="options">
-        <a href="Globe.html" target="_blank">Go to Page 1</a>
+        <a href="Globe.html" target="_blank">Globe Game</a>
         <a href="dino.html" target="_blank">Play the Dino Game</a>
         <a href="cow.html" target="_blank">Play the Cow Game</a>
       </div>
